--- a/pixi.toml
+++ b/pixi.toml
@@ -15,3 +15,4 @@ python = ">=3.10,<3.13"
 torch = ">=2.6.0, <3"
 torchvision = ">=0.21.0, <0.22"
 torchaudio = ">=2.6.0, <3"
+monailabel = ">=0.8.5, <0.9"
