Pixi add optional deps

--- a/pixi.toml
+++ b/pixi.toml
@@ -16,3 +16,5 @@ torch = ">=2.6.0, <3"
 torchvision = ">=0.21.0, <0.22"
 torchaudio = ">=2.6.0, <3"
 monailabel = ">=0.8.5, <0.9"
+cucim = ">=23.10.0, <24"
+cupy-cuda12x = ">=13.3.0, <14"
