--- a/pixi.toml
+++ b/pixi.toml
@@ -7,6 +7,7 @@ platforms = ["linux-64"]
 version = "0.1.0"
 
 [tasks]
+monailabel = "$PIXI_PROJECT_ROOT/.pixi/envs/default/lib/python3.12/site-packages/monailabel/scripts/monailabel"
 
 [dependencies]
 python = ">=3.10,<3.13"
