--- a/pixi.toml
+++ b/pixi.toml
@@ -21,3 +21,6 @@ torchaudio = ">=2.6.0, <3"
 monailabel = ">=0.8.5, <0.9"
 cucim = ">=23.10.0, <24"
 cupy-cuda12x = ">=13.3.0, <14"
+cellpose = "==3.0.8"
+natsort = "==8.4.0"
+fastremap = "==1.15.0"
